tests/ui/fail/ids_delimiter_punct.rs
use leptos_unique_ids::leptos_unique_ids;

#[leptos_unique_ids("foo": "bar")]
pub enum Ids {}

fn main() {}
